tests/src/Loader/classloader/generics/Instantiation/Negative/param07.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_param07_param07_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param07_param07_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param07\\param07.cmd");
        }
    }
}
